rename objects, remove pv and config nodeport svc
NOTE: published ports by NodePort are not yet visible from the ouside

--- a/scenarios/private_scenario/k8s_resources/db-deployment.yaml
+++ b/scenarios/private_scenario/k8s_resources/db-deployment.yaml
@@ -31,9 +31,9 @@ spec:
           name: gitea-db
           volumeMounts:
             - mountPath: /var/lib/mysql
-              name: db-claim0
+              name: db-volume0
       restartPolicy: Always
       volumes:
-        - name: db-claim0
+        - name: db-volume0
           persistentVolumeClaim:
             claimName: db-claim0
