--- a/scenarios/private_scenario/k8s_resources/db-claim0-persistentvolumeclaim.yaml
+++ b/scenarios/private_scenario/k8s_resources/db-claim0-persistentvolumeclaim.yaml
@@ -9,7 +9,8 @@ metadata:
   name: db-claim0
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: managed-nfs-storage
   resources:
     requests:
       storage: 1Gi
