configure loadbalancer for both gitea and db

--- a/scenarios/private_scenario/k8s_resources/db-deployment.yaml
+++ b/scenarios/private_scenario/k8s_resources/db-deployment.yaml
@@ -32,6 +32,9 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: db-volume0
+          ports:
+            - containerPort: 3306
+              name: mysql
       restartPolicy: Always
       volumes:
         - name: db-volume0
