--- a/scenarios/private_scenario/k8s_resources/db-service.yaml
+++ b/scenarios/private_scenario/k8s_resources/db-service.yaml
@@ -5,12 +5,12 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    service: gitea-server-service
-  name: gitea-service
+    service: gitea-db-service
+  name: gitea-db-service
 spec:
   type: LoadBalancer
   ports:
-    - name: "port-3000"
-      port: 3000
+    - name: "port-3306"
+      port: 3306
   selector:
-    service: gitea-server
+    service: gitea-db-server
