--- a/scenarios/private_scenario/k8s_resources/gitea-loadbalancer.yaml
+++ b/scenarios/private_scenario/k8s_resources/gitea-loadbalancer.yaml
@@ -3,10 +3,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitea-loadbalancer
+  name: gitea-ssh-loadbalancer
+  annotations:
+    metallb.universe.tf/address-pool: default
 spec:
   type: LoadBalancer
-  loadBalancerIP: 10.0.0.3
   selector:
     app: gitea
   ports:
