--- a/scenarios/private_scenario/k8s_resources/gitea-nodeport.yaml
+++ b/scenarios/private_scenario/k8s_resources/gitea-nodeport.yaml
@@ -3,9 +3,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitea-nodeport
+  name: gitea-http-loadbalancer
+  annotations:
+    metallb.universe.tf/address-pool: default
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: web
       protocol: TCP
