allow all hosts on the host network to connect to odfe pods

--- a/scenarios/private_scenario/k8s_resources/elk/odfe-net-networkpolicy.yaml
+++ b/scenarios/private_scenario/k8s_resources/elk/odfe-net-networkpolicy.yaml
@@ -10,6 +10,8 @@ spec:
         - podSelector:
             matchLabels:
               io.kompose.network/odfe-net: "true"
+        - ipBlock:
+            cidr: 10.0.0.0/24
   podSelector:
     matchLabels:
       io.kompose.network/odfe-net: "true"
